# cerebro-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_CN.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.cargo/: config.toml
.claude-plugin/: marketplace.json
.github/workflows/: build.yml  ci.yml  release.yml
.omo/: boulder.json  handoff-lancedb-gc.md
.omo/drafts/: hook-refactor.md
.omo/evidence/: task-1-build.txt  task-1-part-type-verification.txt  task-1-preference-removal.txt  task-2-build.txt  task-2-hook-order-glm-verification.txt  task-2-v1-profile-cleanup.txt  task-3-compile-check.txt  task-3-memory-injection-hook.txt  task-3-v1-profile-cleanup.txt  task-4-compile-check.txt  task-4-v2-config.txt  task-5-config-injection-strategy.txt  task-5-profile-v2.txt  task-6-8-hook-registration.txt  task-6-profile-v2.txt  task-7-compaction-prompt.txt  task-9-cargo-build.txt
.omo/plans/: 2026-05-10-fix-agent-readonly-bypass.md  2026-05-22-session-ingest-refine-draft.md  2026-05-22-session-ingest-refine.md  INDEX.md  auto-migrate-project-path.md  fetch-policy-strong.md  first-round-blocking-and-recall-accuracy.md  hook-refactor.md  (+27 more)
docs/: API.md  DEPLOY.md  DESIGN.md  PIPELINE.md  PLUGINS.md  SHARING.md  architecture.md  bootstrap-skill.md
omem-server/: Cargo.toml
omem-web/: .gitignore  AGENTS.md  TEST_GUIDE_v0.1.5.md  eslint.config.js  handoff.md  index.html  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
plugins/: AGENTS.md
scripts/: build-plugin-web.sh
(+366 files in other folders)
